# apollo

./: .craft.yml  .gitignore  .gitmodules  .gitmodules.bad  .gitpod.yml  .kodiak.toml  Cargo.toml  README.md
.github/: dependabot.yml  renovate.json
.github/workflows/: ci.yaml  fmt.yml  ossar.yml  release.yml  scorecard.yml  sub.yml  submod.yml
apollo-api/apollo-api/: Cargo.toml
apollo-api/apollo-api/src/: lib.rs
apollo-api/apollo-standard/: Cargo.toml
apollo-api/apollo-standard/src/: lib.rs
apollo-frontend/apollo-frontend-macroquad/: Cargo.toml
apollo-hyper/apollo-hyper-api/apollo-hyper-api-interface/: CHANGELOG.md  Cargo.toml
apollo-hyper/apollo-hyper-api/apollo-hyper-api-interface/src/: lib.rs
apollo-hyper/apollo-hyper-api/apollo-hyper-api-standard/: CHANGELOG.md  Cargo.toml
apollo-hyper/apollo-hyper-frontend/apollo-hyper-frontend-macroquad/: CHANGELOG.md  Cargo.toml
apollo-hyper/apollo-hyper-libretro-cores/apollo-hyper-libretro-core-a5200/: CHANGELOG.md  Cargo.toml  build.rs
apollo-hyper/apollo-hyper-libretro-cores/apollo-hyper-libretro-core-beetle-ngb/: CHANGELOG.md  Cargo.toml  build.rs
apollo-hyper/apollo-hyper-libretro-cores/apollo-hyper-libretro-core-beetle-ngp/: Cargo.toml  build.rs
apollo-hyper/apollo-hyper-libretro-cores/apollo-hyper-libretro-core-beetle-psx/: CHANGELOG.md  Cargo.toml
apollo-hyper/apollo-hyper-libretro-cores/apollo-hyper-libretro-core-beetle-vb/: CHANGELOG.md  Cargo.toml  build.rs
apollo-hyper/apollo-hyper-libretro-cores/apollo-hyper-libretro-core-beetle-wswan/: CHANGELOG.md  Cargo.toml  build.rs
apollo-hyper/apollo-hyper-libretro-cores/apollo-hyper-libretro-core-freechaf/: CHANGELOG.md  Cargo.toml  build.rs
apollo-hyper/apollo-hyper-libretro-cores/apollo-hyper-libretro-core-freeintv/: CHANGELOG.md  Cargo.toml  build.rs
apollo-hyper/apollo-hyper-libretro-cores/apollo-hyper-libretro-core-gearcoleco/: CHANGELOG.md  Cargo.toml  build.rs
apollo-hyper/apollo-hyper-libretro-cores/apollo-hyper-libretro-core-genesis-plus-gx/: CHANGELOG.md  Cargo.toml  build.rs
apollo-hyper/apollo-hyper-libretro-cores/apollo-hyper-libretro-core-handy/: CHANGELOG.md  Cargo.toml  build.rs
apollo-hyper/apollo-hyper-libretro-cores/apollo-hyper-libretro-core-melonds/: CHANGELOG.md  Cargo.toml  build.rs
apollo-hyper/apollo-hyper-libretro-cores/apollo-hyper-libretro-core-mgba/: CHANGELOG.md  Cargo.toml  build.rs
apollo-hyper/apollo-hyper-libretro-cores/apollo-hyper-libretro-core-mupen64plus-next/: CHANGELOG.md  Cargo.toml  build.rs
apollo-hyper/apollo-hyper-libretro-cores/apollo-hyper-libretro-core-neocd/: CHANGELOG.md  Cargo.toml  build.rs
apollo-hyper/apollo-hyper-libretro-cores/apollo-hyper-libretro-core-snes9x/: CHANGELOG.md  Cargo.toml  build.rs
apollo-hyper/apollo-hyper-libretro-cores/apollo-hyper-libretro-core-snes9x/snes9x/: memmap.cpp
apollo-hyper/apollo-hyper-libretro-cores/apollo-hyper-libretro-core-snes9x/snes9x/libretro/: Makefile  Makefile.common  libretro.cpp  libretro_core_options.h  libretro_core_options_intl.h
apollo-hyper/apollo-hyper-libretro/apollo-hyper-libretro-bindings/: CHANGELOG.md  Cargo.toml
apollo-hyper/apollo-hyper-libretro/apollo-hyper-libretro-bindings/src/: buttons.rs  emulator.rs  lib.rs
apollo-hyper/apollo-hyper-libretro/apollo-hyper-libretro-build/: CHANGELOG.md  Cargo.toml
apollo-hyper/apollo-hyper-libretro/apollo-hyper-libretro-build/src/: build.rs  clone.rs  dir.rs  lib.rs
apollo-hyper/apollo-hyper-libretro/apollo-hyper-libretro-cores/: CHANGELOG.md  Cargo.toml
apollo-hyper/apollo-hyper-libretro/apollo-hyper-libretro-cores/src/: lib.rs
apollo-hyper/apollo-hyper-libretro/apollo-hyper-libretro-sys/: CHANGELOG.md  Cargo.toml  README.md
apollo-hyper/apollo-hyper-libretro/apollo-hyper-libretro-sys/src/: lib.rs
apollo-libretro-cores/apollo-libretro-a5200/: Cargo.toml  build.rs
apollo-libretro-cores/apollo-libretro-beetle-ngb/: Cargo.toml
apollo-libretro-cores/apollo-libretro-beetle-psx/: Cargo.toml  build.rs
apollo-libretro-cores/apollo-libretro-beetle-vb/: Cargo.toml  build.rs
apollo-libretro-cores/apollo-libretro-beetle-wswan/: Cargo.toml  build.rs
apollo-libretro-cores/apollo-libretro-freechaf/: Cargo.toml  build.rs
apollo-libretro-cores/apollo-libretro-freeintv/: Cargo.toml  build.rs
apollo-libretro-cores/apollo-libretro-gearcoleco/: Cargo.toml  build.rs
apollo-libretro-cores/apollo-libretro-genesis-plus-gx/: Cargo.toml  build.rs
apollo-libretro-cores/apollo-libretro-handy/: Cargo.toml  build.rs
apollo-libretro-cores/apollo-libretro-melonds/: Cargo.toml  build.rs
apollo-libretro-cores/apollo-libretro-mgba/: Cargo.toml  build.rs
apollo-libretro-cores/apollo-libretro-mupen64plus-next/: Cargo.toml  build.rs
apollo-libretro-cores/apollo-libretro-neocd/: Cargo.toml  build.rs
apollo-libretro-cores/apollo-libretro-nestopia-ue/: Cargo.toml  build.rs
apollo-libretro-cores/apollo-libretro-o2em/: Cargo.toml  build.rs
apollo-libretro-cores/apollo-libretro-opera/: Cargo.toml  build.rs
apollo-libretro-cores/apollo-libretro-parallel-64/: Cargo.toml  build.rs
apollo-libretro-cores/apollo-libretro-parallel-64/src/: lib.rs
apollo-libretro-cores/apollo-libretro-prosystem/: Cargo.toml  build.rs
apollo-libretro-cores/apollo-libretro-snes9x/: Cargo.toml  build.rs
apollo-libretro-cores/apollo-libretro-stella-2014/: Cargo.toml  build.rs
apollo-libretro-cores/apollo-libretro-vecx/: Cargo.toml  build.rs
apollo-libretro-cores/apollo-libretro-virtual-jaguar/: Cargo.toml  build.rs
apollo-libretro-cores/apollo-libretro-yabause/: Cargo.toml  build.rs
apollo-libretro/apollo-binding-libretro/: Cargo.toml  Justfile  fastgit.sh
apollo-libretro/apollo-binding-libretro-mgba/: Cargo.toml
apollo-libretro/apollo-libretro-bindings/: Cargo.toml
apollo-libretro/apollo-libretro-bindings/src/: emulator.rs  lib.rs
apollo-libretro/apollo-libretro-build/: Cargo.toml
apollo-libretro/apollo-libretro-cores/: Cargo.toml
apollo-libretro/apollo-libretro-cores/src/: lib.rs
apollo-libretro/apollo-libretro-mgba/: Cargo.toml
scripts/: bump-version.sh  fix-gitmodules.mjs
(+86 files in other folders)
