[package]
name = "apollo-libretro-cores"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apollo-libretro-a5200 = { version = "0.1.0", path = "../../apollo-libretro-cores/apollo-libretro-a5200" }
apollo-libretro-beetle-ngb = { version = "0.1.0", path = "../../apollo-libretro-cores/apollo-libretro-beetle-ngb" }
apollo-libretro-beetle-psx = { version = "0.1.0", path = "../../apollo-libretro-cores/apollo-libretro-beetle-psx" }
apollo-libretro-beetle-vb = { version = "0.1.0", path = "../../apollo-libretro-cores/apollo-libretro-beetle-vb" }
apollo-libretro-beetle-wswan = { version = "0.1.0", path = "../../apollo-libretro-cores/apollo-libretro-beetle-wswan" }
apollo-libretro-freechaf = { version = "0.1.0", path = "../../apollo-libretro-cores/apollo-libretro-freechaf" }
apollo-libretro-freeintv = { version = "0.1.0", path = "../../apollo-libretro-cores/apollo-libretro-freeintv" }
apollo-libretro-gearcoleco = { version = "0.1.0", path = "../../apollo-libretro-cores/apollo-libretro-gearcoleco" }
apollo-libretro-genesis-plus-gx = { version = "0.1.0", path = "../../apollo-libretro-cores/apollo-libretro-genesis-plus-gx" }
apollo-libretro-mgba = { version = "0.1.0", path = "../../apollo-libretro-cores/apollo-libretro-mgba" }
apollo-libretro-handy = { version = "0.1.0", path = "../../apollo-libretro-cores/apollo-libretro-handy" }
apollo-libretro-melonds = { version = "0.1.0", path = "../../apollo-libretro-cores/apollo-libretro-melonds" }
apollo-libretro-mupen64plus-next = { version = "0.1.0", path = "../../apollo-libretro-cores/apollo-libretro-mupen64plus-next" }
apollo-libretro-neocd = { version = "0.1.0", path = "../../apollo-libretro-cores/apollo-libretro-neocd" }
apollo-libretro-nestopia-ue = { version = "0.1.0", path = "../../apollo-libretro-cores/apollo-libretro-nestopia-ue" }
apollo-libretro-o2em = { version = "0.1.0", path = "../../apollo-libretro-cores/apollo-libretro-o2em" }
apollo-libretro-opera = { version = "0.1.0", path = "../../apollo-libretro-cores/apollo-libretro-opera" }
apollo-libretro-parallel-64 = { version = "0.1.0", path = "../../apollo-libretro-cores/apollo-libretro-parallel-64" }
apollo-libretro-prosystem = { version = "0.1.0", path = "../../apollo-libretro-cores/apollo-libretro-prosystem" }
apollo-libretro-snes9x = { version = "0.1.0", path = "../../apollo-libretro-cores/apollo-libretro-snes9x" }
apollo-libretro-stella-2014 = { version = "0.1.0", path = "../../apollo-libretro-cores/apollo-libretro-stella-2014" }
apollo-libretro-vecx = { version = "0.1.0", path = "../../apollo-libretro-cores/apollo-libretro-vecx" }
apollo-libretro-virtual-jaguar = { version = "0.1.0", path = "../../apollo-libretro-cores/apollo-libretro-virtual-jaguar" }
apollo-libretro-yabause = { version = "0.1.0", path = "../../apollo-libretro-cores/apollo-libretro-yabause" }
