[package]
name = "apollo-hyper-api-interface"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apollo-hyper-libretro-bindings = { version = "0.1.0", path = "../../apollo-hyper-libretro/apollo-hyper-libretro-bindings", optional = true }

[features]
default = ["libretro"]
libretro = ["dep:apollo-hyper-libretro-bindings"]
