[package]
name = "apollo-hyper-frontend-macroquad"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apollo-hyper-api-interface = { version = "0.1.0", path = "../../apollo-hyper-api/apollo-hyper-api-interface" }

[dependencies]
apollo-hyper-api-interface = { version = "0.1.0", path = "../../apollo-hyper-api/apollo-hyper-api-interface" }
