[package]
name = "apollo-hyper-frontend-macroquad"
license = "Unlicense"
description = "TODO: Add description"
version = "0.1.1"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apollo-hyper-api-interface = { version = "0.1.1", path = "../../apollo-hyper-api/apollo-hyper-api-interface" }
