[package]
name = "apollo-hyper-libretro-build"
license = "Unlicense"
description = "TODO: Add description"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owo-colors = "3.5.0"
glob = "0.3.1"
ci_info = "0.14.9"
git2 = "0.16.1"
eyre = "0.6.8"