[package]
name = "apollo-hyper-libretro-cores"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apollo-hyper-libretro-core-a5200 = { version = "0.1.0", path = "../../apollo-hyper-libretro-cores/apollo-hyper-libretro-core-a5200" }
apollo-hyper-libretro-core-beetle-ngp = { version = "0.1.0", path = "../../apollo-hyper-libretro-cores/apollo-hyper-libretro-core-beetle-ngp" }
apollo-hyper-libretro-core-beetle-psx = { version = "0.1.0", path = "../../apollo-hyper-libretro-cores/apollo-hyper-libretro-core-beetle-psx" }
apollo-hyper-libretro-core-beetle-vb = { version = "0.1.0", path = "../../apollo-hyper-libretro-cores/apollo-hyper-libretro-core-beetle-vb" }
apollo-hyper-libretro-core-beetle-wswan = { version = "0.1.0", path = "../../apollo-hyper-libretro-cores/apollo-hyper-libretro-core-beetle-wswan" }
apollo-hyper-libretro-core-freechaf = { version = "0.1.0", path = "../../apollo-hyper-libretro-cores/apollo-hyper-libretro-core-freechaf" }
apollo-hyper-libretro-core-freeintv = { version = "0.1.0", path = "../../apollo-hyper-libretro-cores/apollo-hyper-libretro-core-freeintv" }
apollo-hyper-libretro-core-gearcoleco = { version = "0.1.0", path = "../../apollo-hyper-libretro-cores/apollo-hyper-libretro-core-gearcoleco" }
apollo-hyper-libretro-core-genesis-plus-gx = { version = "0.1.0", path = "../../apollo-hyper-libretro-cores/apollo-hyper-libretro-core-genesis-plus-gx" }
apollo-hyper-libretro-core-mgba = { version = "0.1.0", path = "../../apollo-hyper-libretro-cores/apollo-hyper-libretro-core-mgba" }
apollo-hyper-libretro-core-handy = { version = "0.1.0", path = "../../apollo-hyper-libretro-cores/apollo-hyper-libretro-core-handy" }
apollo-hyper-libretro-core-melonds = { version = "0.1.0", path = "../../apollo-hyper-libretro-cores/apollo-hyper-libretro-core-melonds" }
apollo-hyper-libretro-core-mupen64plus-next = { version = "0.1.0", path = "../../apollo-hyper-libretro-cores/apollo-hyper-libretro-core-mupen64plus-next" }
apollo-hyper-libretro-core-neocd = { version = "0.1.0", path = "../../apollo-hyper-libretro-cores/apollo-hyper-libretro-core-neocd" }
apollo-hyper-libretro-core-nestopia-ue = { version = "0.1.0", path = "../../apollo-hyper-libretro-cores/apollo-hyper-libretro-core-nestopia-ue" }
apollo-hyper-libretro-core-o2em = { version = "0.1.0", path = "../../apollo-hyper-libretro-cores/apollo-hyper-libretro-core-o2em" }
apollo-hyper-libretro-core-opera = { version = "0.1.0", path = "../../apollo-hyper-libretro-cores/apollo-hyper-libretro-core-opera" }
apollo-hyper-libretro-core-parallel-64 = { version = "0.1.0", path = "../../apollo-hyper-libretro-cores/apollo-hyper-libretro-core-parallel-64" }
apollo-hyper-libretro-core-prosystem = { version = "0.1.0", path = "../../apollo-hyper-libretro-cores/apollo-hyper-libretro-core-prosystem" }
apollo-hyper-libretro-core-snes9x = { version = "0.1.0", path = "../../apollo-hyper-libretro-cores/apollo-hyper-libretro-core-snes9x" }
apollo-hyper-libretro-core-stella-2014 = { version = "0.1.0", path = "../../apollo-hyper-libretro-cores/apollo-hyper-libretro-core-stella-2014" }
apollo-hyper-libretro-core-vecx = { version = "0.1.0", path = "../../apollo-hyper-libretro-cores/apollo-hyper-libretro-core-vecx" }
apollo-hyper-libretro-core-virtual-jaguar = { version = "0.1.0", path = "../../apollo-hyper-libretro-cores/apollo-hyper-libretro-core-virtual-jaguar" }
apollo-hyper-libretro-core-yabause = { version = "0.1.0", path = "../../apollo-hyper-libretro-cores/apollo-hyper-libretro-core-yabause" }
