[package]
name = "apollo-hyper-libretro-sys"
version = "0.1.2"
authors = ["Jan Bujak <j@exia.io>", "Wyatt-Stanke"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/koute/libretro-sys"
homepage = "https://github.com/koute/libretro-sys"
description = """
Raw libretro API bindings for Rust
"""

[dependencies]
"libc" = "0.2"
